[package]
name = "numera"
description = "numbers"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/numera"
documentation = "https://docs.rs/numera"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/res/*.html",
	"/LICENSE-*.md",
	"/README.md",
]
categories = ["mathematics"]
keywords = ["math", "mathematics", "number", "numeral", "numeric"]
publish = true

[features]
default = ["std", "safe", "all_fast"] # MAYBE all

#* standard features *#

# avoid using cargo add until rust v1.72 because of a bug that reformats the [features] section:
std = [
	"devela/std",
	"primal-sieve",
	"dashu-base?/std",
	"dashu-int?/std",
	"decstr?/std", # + num-bigint, num-traits
	"half?/std", # + alloc
	"twofloat?/math_funcs", # + std
]
safe = ["devela/safe"]
unsafe = [] # enable unsafe alternatives
nightly = [] # used only for better docs

#* extra features *#

all = ["big", "all_float", "try_from"] # all features
all_fast = ["big", "all_float"] # all features except slowest
all_nostd = ["all_float", "try_from"] # all no-std features
all_nostd_fast = ["all_float"] # all no-std features except slowest

# features that increases compilation time
try_from = [] # TryFrom conversions

big = ["dashu-base", "dashu-int"] # big numbers
all_float = ["decstr", "half", "twofloat"] # all extra floating-point

[dependencies]
devela = { version = "0.4.1", default-features = false }

#* optional dependencies *#

# *std*
primal-sieve = { version = "0.3.6", optional = true, default-features = false }

# big
dashu-int = { version = "0.3.1", optional = true, default-features = false }
dashu-base = { version = "0.3.1", optional = true, default-features = false }

# all_float
decstr = { version = "0.1.3", optional = true, default-features = false }
half = { version = "2.2.1", optional = true, default-features = false  }
twofloat = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"

[profile.dev]
opt-level = 3 # for faster prime testing

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly", "std", "all"]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]

[badges]
maintenance = { status = "experimental" }
