[package]
name = "numera"
description = "numbers"
version = "0.4.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/numera"
documentation = "https://docs.rs/numera"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/res/*.html",
	"/LICENSE-*.md",
	"/README.md",
]
categories = ["mathematics", "no-std::no-alloc"]
keywords = ["math", "mathematics", "number", "numeral", "numeric"]
publish = true

# ------------------------------------------------------------------------------

[features]
default = ["std", "all_fast"]

#* environment features *#
# (not enabling "std" declares the library as "no_std")
std = [ # enables functionality that depend on the standard library
	"alloc",
	"devela/std",
	"primal-sieve",
	"dashu-base?/std",
	"dashu-int?/std",
	"decstr?/std", # + num-bigint, num-traits
	"half?/std", # + alloc
	"twofloat?/math_funcs", # + std
]
alloc = ["half?/alloc"] # enables functionality that depend on allocation
no_std = ["devela/no_std"] # enables functionality incompatible with the standard library

#* safety features *#
safe = [] # forbids unsafe at the crate level
safest = ["safe", "devela/safest"] # forbids unsafe recursively
unsafe = [] # enables the unsafe features
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively

#* nightly features *#
nightly = [] # enables the nightly features
nightly_docs = [ # features for docs.rs
	"nightly",
	"std",
	"all",
	"devela/nightly_docs",
]

#* deprecated features *#
no-std = ["no_std"] # since 0.4.0
non-safe = ["unsafe"] # since 0.4.0

#* other features *#
all = ["big", "float", "try_from"] # all features
all_fast = ["big", "float"] # all features except slowest
all_nostd = ["float", "try_from"] # all no_std features
all_nostd_fast = ["float"] # all no_std features except slowest

# features that increase compilation time
try_from = [] # TryFrom conversions

# extra numbers
big = ["alloc", "dashu-base", "dashu-int"] # big numbers
float = ["decstr", "half", "twofloat"] # floating-point

dashu-int = ["dep:dashu-int", "std"]

# ------------------------------------------------------------------------------

[dependencies]
devela = { version = "0.8.0", default-features = false }

#* optional dependencies *#

# *std*
primal-sieve = { version = "0.3.6", optional = true, default-features = false }

# big
dashu-int = { version = "0.3.1", optional = true, default-features = false }
dashu-base = { version = "0.3.1", optional = true, default-features = false }

# float
decstr = { version = "0.2.0", optional = true, default-features = false }
half = { version = "2.3", optional = true, default-features = false  }
twofloat = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"

# ------------------------------------------------------------------------------

[profile.dev]
opt-level = 3 # for faster prime testing

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
