[package]
name = "numera"
description = "numbers"
version = "0.4.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/numera"
documentation = "https://docs.rs/numera"
license = "MIT OR Apache-2.0"
include = [
	"/Cargo.toml",
	"/src/**/*.rs",
	"/src/**/*.md",
	"/res/*.html",
	"/LICENSE-*",
	"/README.md",
]
categories = ["mathematics", "no-std::no-alloc"]
keywords = ["math", "mathematics", "number", "numeral", "numeric"]
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = ["full_fast", "try_from"] # enables all the capabilities
full_fast = ["big", "float"] # enables all the fast capabilities
# thematic capabilities:
big = ["alloc", "dashu-base", "dashu-int"] # adds support for big numbers
float = ["decstr", "half", "twofloat"] # adds extra floating-point formats
try_from = [] # adds many TryFrom conversions (increases compilation time)

#* environment features *#
std = [ # disables `no_std` mode and enables `std` functionality
	"alloc",
	"devela/std",
	"primal-sieve",
	"dashu-base?/std",
	"dashu-int?/std",
	"decstr?/std", # + num-bigint, num-traits
	"half?/std", # + alloc
	"twofloat?/math_funcs", # + std
]
alloc = ["half?/alloc"] # enables `alloc` functionality
no_std = ["devela/no_std"] # enables functionality incompatible with `std`

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe features recursively
unsafe = [] # enables all the unsafe sub-features
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbids unsafe recursively

#* nightly features *#
nightly = [] # enables nightly features
nightly_docs = [ # enables features for docs.rs
	"nightly", "full", "std",
]

#* deprecated features *#
no-std = ["no_std"] # since 0.4.0
non-safe = ["unsafe"] # since 0.4.0
all = ["full"] # since 0.5.0
all_fast = ["full_fast"] # since 0.5.0
all_nostd = ["float", "try_from"] # since 0.5.0
all_nostd_fast = ["float"] # since 0.5.0

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"

#* optional dependencies *#

# *std*
primal-sieve = { version = "0.3.6", optional = true, default-features = false }

# big
dashu-int = { version = "0.3.1", optional = true, default-features = false }
dashu-base = { version = "0.3.1", optional = true, default-features = false }

# float
decstr = { version = "0.2.0", optional = true, default-features = false }
half = { version = "2.3", optional = true, default-features = false  }
twofloat = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"

# ------------------------------------------------------------------------------

[profile.dev]
opt-level = 3 # for faster prime testing

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
